fixing facebook spacing

--- a/css/index.css
+++ b/css/index.css
@@ -63,8 +63,8 @@ main div.facebook iframe{
         margin: 1rem;
         padding: 1rem;
         display: block;
-        width: 500475pxpx;
-        height: 690px;
+        width: 450px;
+        height: 700px;
         flex-direction: row;
         justify-content: center;
         align-items: center;
